fixed footer gap

--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ Offer section
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    row-gap: 2rem;
+    row-gap: 1rem;
     padding-block: 4rem 10rem;
 }
 .gift_card{
@@ -622,10 +622,12 @@ footer svg{
 @media (min-width: 360px) {
     .app-container{
         flex-direction: row;
-        gap: 2rem;
     }
 }
 @media(min-width: 960px) {
+    .app-container{
+        gap: 2rem;
+    }
     .footer__menu{
         flex-direction: row;
     }
